Helper for Boost, fixed include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.7)
 project(XRZPlayers)
 
+set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/modules")
 set(CMAKE_CXX_STANDARD 11)
 
-find_package(Boost REQUIRED COMPONENTS system)
+add_subdirectory(boost)
 
 set(SOURCE_FILES main.cpp XRc4Cipher.cpp Packets.hpp)
 add_executable(XRZPlayers ${SOURCE_FILES})
 
-target_link_libraries(XRZPlayers ${Boost_LIBRARIES})
+target_link_libraries(XRZPlayers boost -pthread)
